--- a/app/src/main/res/layout/fragment_jogos_details.xml
+++ b/app/src/main/res/layout/fragment_jogos_details.xml
@@ -33,7 +33,8 @@
         android:id="@+id/inicio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/modalidade"
+        android:layout_marginStart="10dp"
+        android:layout_below="@id/notes_list_favorites"
         android:text="@string/inicio"
         android:textAlignment="center"
         android:textColor="@color/white" />
@@ -41,9 +42,9 @@
         android:id="@+id/fim"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/modalidade"
-        android:layout_toEndOf="@id/inicio"
-        android:layout_marginStart="30dp"
+        android:layout_below="@id/inicio"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
         android:text="@string/fim"
         android:textAlignment="center"
         android:textColor="@color/white" />
@@ -52,7 +53,8 @@
         android:id="@+id/local"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/inicio"
+        android:layout_below="@id/fim"
+        android:layout_marginStart="10dp"
         android:text="@string/local"
         android:layout_alignParentStart="true"
         android:textAlignment="center"
