--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -67,6 +67,9 @@
             app:destination="@id/jogosDetailsFragment"
             app:popUpTo="@id/meusJogosFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/detailsMeusJogos"
+            app:destination="@id/jogosDetailsMeusJogosFragment" />
     </fragment>
     <fragment
         android:id="@+id/perfilFragment"
@@ -110,6 +113,9 @@
             app:destination="@id/jogosDetailsFragment"
             app:popUpTo="@id/historicoFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/detailsHistoricoItem"
+            app:destination="@id/jogosDetailsHistoricoFragment" />
     </fragment>
     <fragment
         android:id="@+id/recuperarSenhaFragment"
@@ -142,5 +148,23 @@
         <action
             android:id="@+id/action_esperarFragment_to_meusJogosFragment"
             app:destination="@id/meusJogosFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/jogosDetailsMeusJogosFragment"
+        android:name="br.edu.ufabc.isports.view.JogosDetailsMeusJogosFragment"
+        android:label="JogosDetailsMeusJogosFragment" >
+        <argument
+            android:name="jogoItem"
+            app:argType="br.edu.ufabc.isports.model.objects.Jogo"
+            app:nullable="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/jogosDetailsHistoricoFragment"
+        android:name="br.edu.ufabc.isports.view.JogosDetailsHistoricoFragment"
+        android:label="JogosDetailsHistoricoFragment" >
+        <argument
+            android:name="jogoItem"
+            app:argType="br.edu.ufabc.isports.model.objects.Jogo"
+            app:nullable="true" />
     </fragment>
 </navigation>
